--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 100%;
+    width: 93%;
 }
 
 .header {
@@ -32,14 +32,16 @@ body {
     display: flex;
     justify-content: center;
     width: 100%;
-    background-color: rgb(54, 54, 54);
-    color: rgb(223, 223, 223);
+    background-color: rgb(36, 36, 36);
+    color: rgb(194, 194, 194);
+    box-shadow: 0 4px 8px 0 rgba(112, 112, 112, 0.2), 0 6px 20px 0 rgba(131, 131, 131, 0.19);
+    text-align: center;
 }
 
 .containerInput {
     margin: auto;
     padding: 2%;
-    width: 70%;
+    width: 48%;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -79,23 +81,28 @@ body {
 }
 
 .card.allCards {
+    margin: auto;
     background-color: rgb(63, 63, 63);
     color: whitesmoke;
     font-size: 85%;
+    box-shadow: 0 4px 8px 0 rgba(171, 171, 171, 0.2), 0 6px 20px 0 rgba(159, 159, 159, 0.19);
+    text-align: center;
 }
 
 #barraOrden {
     margin: auto;
-    padding: 5px;
+    padding: 3px;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    width: 75%;
-    background-color: grey;
-    color: whitesmoke;
+    width: 45%;
+    background-color: rgb(76, 76, 76);
+    color: rgb(171, 171, 171);
     font-size: 100%;
     gap: 3%;
+    box-shadow: 0 4px 8px 0 rgba(110, 110, 110, 0.2), 0 6px 20px 0 rgba(77, 77, 77, 0.19);
+    text-align: center;
 }
 
 @media (max-width: 600px) {
@@ -107,6 +114,18 @@ body {
     body {
         position: relative;
         overflow-x: hidden;
+    }
+    .mainHeader {
+        margin: auto;
+        width: 100%;
+    }
+    .containerInput {
+        margin: auto;
+        width: 100%;
+    }
+    #barraOrden {
+        margin: auto;
+        width: 100%;
     }
     .headerImg {
         display: none;
