--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Italianno&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap');
 body {
     margin: 0;
-    font-family: 'Italianno', cursive;
+    font-family: 'Oswald', sans-serif;
     background-color: #3f4140d1;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
